
syntax = "proto3";

package music_service.album.v1;

option go_package = "github.com/VrMolodyakov/vgm/music/app/gen/go/music/profession/v1;pb_music_profession";


message Profession {
    uint32 profession_id = 1;
    string professional_title = 2;
}

